<resources>
    <string name="app_name">Guru XO</string>
    <string name="main_screen_title">Guru XO - Main lobby</string>
    /* Login Activity text */
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="login_main_title">Welcome to Guru XO</string>

    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>


</resources>
