<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@mipmap/app_icon" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/login_main_title"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <ImageView

            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_logo"

            />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="Play the classic Tic Tac Toe game\nwith your best friends on-line." />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />



    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

            <EditText
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimaryText"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimaryText"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
            <!---->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/google_sing_in_button_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/email_password_buttons"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:buttonSize="wide"
                app:colorScheme="light"

                />
            <!--app:te="Google Sign In"-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="3.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:textColor="@color/colorPrimaryText"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/verify_email_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:maxLines="1"
                android:text="@string/verify_email"
                android:textColor="@color/colorPrimaryText"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/lobby_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="Lobby"
                android:textColor="@color/colorPrimaryText"
                android:theme="@style/ThemeOverlay.MyDarkButton"

                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
